# name: test_create[uvloop-None]
  <class 'dict'> {
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'id': '9pfsom1b',
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create[uvloop-None].1
  <class 'dict'> {
    '_id': '9pfsom1b',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create[uvloop-test_analysis]
  <class 'dict'> {
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'id': 'test_analysis',
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create[uvloop-test_analysis].1
  <class 'dict'> {
    '_id': 'test_analysis',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
